use SparkFiles to distribute variants db